--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "test": "npm run test:html",
     "test:html": "globstar nu-html-checker *.html",
     "init-project": "npm install && npm-run-all init:*",
-    "init:dirs": "mkdirp sass css vendor images js docs",
-    "init:files": "touch README.md index.html sass/style.scss js/script.js",
+    "init:dirs": "mkdirp src/sass src/css src/vendor src/images src/js src/docs",
+    "init:files": "touch README.md src/index.html src/sass/style.scss src/js/script.js",
     "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
-    "build": "npm-run-all build:* test",
-    "build:clean": "rimraf css/*.css",
-    "build:sass": "node-sass --output-style compressed -o css sass",
-    "build:autoprefixer": "autoprefixer-cli css/style.css",
+    "clean": "rimraf dist",
+    "copy:html": "rimraf dist/**/*.html && cpy \"**/*.html\" \"../dist\" --cwd=src --parents",
+    "copy:scripts": "rimraf dist/js && cpy \"**/*\" \"../../dist/js\" --cwd=src/js --parents",
+    "copy:images": "rimraf dist/images && cpy \"**/*\" \"../../dist/images\" --cwd=src/images --parents",
+    "build": "npm-run-all clean copy:* build:*",
+    "build:sass": "node-sass src/sass/style.scss --output-style compressed -o dist/css",
+    "build:autoprefixer": "autoprefixer-cli src/css/style.css",
     "watch": "npm-run-all build -p watch:*",
-    "watch:sassprefixer": "onchange sass/**/*.scss -- npm-run-all build:sass build:autoprefixer",
-    "watch:browsersync": "browser-sync start --server --files css/*.css *.html"
+    "watch:sassprefixer": "onchange src/sass/**/*.scss -- npm-run-all build:sass build:autoprefixer",
+    "watch:browsersync": "browser-sync start --server --files src/css/*.css *.html"
   },
   "repository": {
     "type": "git",
@@ -39,6 +42,7 @@
     "npm-run-all": "^4.1.3",
     "nu-html-checker": "^0.1.0",
     "onchange": "^4.0.0",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "cpy-cli": "^2.0.0"
   }
 }
