--- a/package.json
+++ b/package.json
@@ -35,16 +35,15 @@
   "devDependencies": {
     "autoprefixer-cli": "^1.0.0",
     "browser-sync": "^2.24.4",
+    "cpy-cli": "^2.0.0",
     "globstar": "^1.0.0",
     "html-minifier": "^3.5.19",
     "mkdirp": "^0.5.1",
     "node-sass": "^4.9.0",
-    "npm-run-all": "^4.1.3",
+    "npm-run-all": "^4.1.5",
     "nu-html-checker": "^0.1.0",
     "onchange": "^4.0.0",
-    "rimraf": "^2.6.2",
-    "cpy-cli": "^2.0.0"
+    "rimraf": "^2.6.2"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
